CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)
PROJECT(zveloCAT)

SET(FLAGS "-Wall -W -fPIC -DCLD_WINDOWS -fvisibility=hidden")
SET(DEBUG_FLAGS "-Wall -W -O0 -g -fPIC -DCLD_WINDOWS ")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${DEBUG_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAGS} -fvisibility-inlines-hidden ")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${DEBUG_FLAGS} -fvisibility-inlines-hidden ")
SET(CMAKE_LD_FLAGS "${CMAKE_LD_FLAGS} -Wl,--exclude-libs,ALL -Wl,--gc-sections")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include/signals")

ADD_EXECUTABLE(signals-example Example.cpp)
